White space nowrap change - still an issue - going to fix with inline block

--- a/css_layout_techniques/01_Display_Modes/css/style.css
+++ b/css_layout_techniques/01_Display_Modes/css/style.css
@@ -27,6 +27,7 @@ body {
 
 .main-header {
     padding: 20px;
+    white-space: nowrap;
 }
 
 .main-logo,
